--- a/MdeicalStoreApplication/MedicalStore/Views/Home/Error.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Home/Error.cshtml
@@ -27,7 +27,7 @@
         <div class="notfound">
             <div class="notfound-404">
                 <h1>Oops!</h1>
-                <h2>Something went wrong ,Please tru again later</h2>
+                <h2>Something went wrong ,Please try again later</h2>
             </div>
             @Html.ActionLink("Back Home", "Index", "Home")
         </div>
