--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@
                                                 }
                                             </div>
                                             <div class="cart_content">
-                                                <div class="cart_text">@Html.ActionLink("Cart", "CartContent", "Cart")</div>
+                                                <div class="cart_text">@Html.ActionLink("Cart", "Cart", "Cart")</div>
                                             </div>
                                             <div class="cart_content">
                                                 <div class="cart_text">@Html.ActionLink("Orders", "OrdersContent", "Order")</div>
@@ -334,6 +334,7 @@
     <script src="~/Scripts/jquery-3.5.1.min.js"></script>
     <script src="~/Scripts/popper.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/TweenMax.min.js"></script>
