--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/AdminDashBoard.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/AdminDashBoard.cshtml
@@ -40,10 +40,10 @@
         <div class="main">
             <div class="form">
                 @*<input type="text" name="user" placeholder="Username" autocomplete="off">
-        <input type="email" name="mail" placeholder="email" autocomplete="off">
-        <input type="password" name="pass" placeholder="password">
-        <input type="password" name="pass" placeholder="confirm password">
-        <button class="btn-1"> Add</button>*@
+            <input type="email" name="mail" placeholder="email" autocomplete="off">
+            <input type="password" name="pass" placeholder="password">
+            <input type="password" name="pass" placeholder="confirm password">
+            <button class="btn-1"> Add</button>*@
 
                 @using (Html.BeginForm("RegisterAdmin", "Account", FormMethod.Post, new { enctype = "multipart/form-data" }))
                 {
@@ -61,17 +61,23 @@
 
                     <button type="submit" class="btn-1"> Add</button>
                 }
-                </div>
-
-                <div class="catig">
-                    @Html.Action("Products", "Admin")
-                </div>
-
-                <!-- categores -->
-                <div class="cat">
-                   @Html.Partial("Categories")
-                </div>
             </div>
+
+            <div class="catig">
+                @Html.Action("Products", "Admin")
+            </div>
+
+            <!-- categores -->
+            <div class="cat">
+                @Html.Partial("Categories")
+            </div>
+
+            <!-- orders -->
+            <div class="order">
+                @Html.Action("Orders", "Admin")
+            </div>
+
+        </div>
     </section>
     <!-- script files -->
     <script src="~/Scripts/jquery-3.5.1.min.js"></script>
