--Add Admin Orders view --Fix in admin css & js & html

--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/Orders.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/Orders.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="desc-cat text-center">
+﻿<div class="desc-cat text-center">
     <h1>Orders Status</h1>
 </div>
 <div class="order-table">
