--- a/MdeicalStoreApplication/MedicalStore/Content/Custom/admin.css
+++ b/MdeicalStoreApplication/MedicalStore/Content/Custom/admin.css
@@ -7,7 +7,7 @@
 /* admin side */
 .admin-side {
     background-image: linear-gradient(#6c5ce7, #a29bfe);
-    height: 700px;
+    height: 100vh;
     width: 20%;
     float: left;
     overflow: hidden;
@@ -82,6 +82,7 @@ h3 {
     width: 80%;
     height: 100vh;
     float: left;
+    overflow-y: scroll;
     background-image: linear-gradient(#b7bdbe, #ffffff);
 }
 
@@ -323,3 +324,85 @@ input:last-child {
             background-color: #fff;
             color: #a19afe;
         }
+
+
+
+/* order Start 1 */
+
+.admins-add,
+.categorie-add,
+.products-add,
+.order-status {
+    transition: all 0.5s ease-in-out;
+}
+
+    .admins-add:hover,
+    .categorie-add:hover,
+    .products-add:hover,
+    .order-status:hover {
+        background-color: #fff;
+        color: #6c5ce7;
+    }
+
+/* order End 1 */
+
+
+/* order start 2 */
+.cat .desc-cat,
+.order .desc-cat {
+    color: #fff;
+    font-weight: bold;
+    border-bottom: 2px solid;
+    padding-bottom: 20px;
+    background-color: #a098fd;
+    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+}
+/* order End 2 */
+
+/* order 333 */
+.order {
+    display: none;
+}
+
+    .order table {
+        width: 90%;
+        margin: 20px auto;
+        text-align: center;
+        vertical-align: middle;
+        color: #fff;
+    }
+
+        .order table th {
+            background-color: #a098fd;
+        }
+
+    .order table,
+    th,
+    td {
+        border: 2px solid #a098fd;
+        padding: 5px 0;
+    }
+
+    .order #sel {
+        padding: 3px;
+        width: 90%;
+        background-color: #a098fd;
+        border: navajowhite;
+        color: #fff;
+        outline: none;
+    }
+
+    .order button {
+        width: 70%;
+        color: #fff;
+        background-color: #a098fd;
+        border: none;
+        border-radius: 10px;
+        padding: 5px 0;
+        transition: all 0.3s ease-in-out;
+    }
+
+        .order button:hover {
+            background-color: #cac6fb;
+        }
+
