Edit cart counter & order

--- a/MdeicalStoreApplication/MedicalStore/Views/Cart/CartContent.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Cart/CartContent.cshtml
@@ -5,20 +5,20 @@
     decimal orderTotal = 0;
 }
 <!-- Cart content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 offset-lg-1">
-                <div class="cart_container">
-                    <div class="cart_title">Shopping Cart</div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-10 offset-lg-1">
+            <div class="cart_container">
+                <div class="cart_title">Shopping Cart</div>
 
 
 
 
-                    <div class="cart_items">
-                        <ul class="cart_list">
-                            @foreach (var item in Model)
-                            {
-                                var P = cartProds.SingleOrDefault(i => i.Id == item.ProductId);
+                <div class="cart_items">
+                    <ul class="cart_list">
+                        @foreach (var item in Model)
+                        {
+                            var P = cartProds.SingleOrDefault(i => i.Id == item.ProductId);
                             <li class="cart_item clearfix">
                                 <div class="cart_item_image"><img src="data:image/png;base64,@P.Image" alt=""></div>
                                 <div class="cart_item_info d-flex flex-md-row flex-column justify-content-between">
@@ -40,26 +40,30 @@
                                         <div class="cart_item_text">@((P.Price * item.Quantity).ToString("0.#####")) LE</div>
                                     </div>
                                 </div>
-                                @Ajax.ActionLink("Edit", "EditCart", "Cart", routeValues: new { id = item.ProductId }, htmlAttributes: new { @class = "btn btn-info" }, ajaxOptions: new AjaxOptions { HttpMethod = "Get", UpdateTargetId = "editCart", InsertionMode = InsertionMode.Replace, OnSuccess = "EditToggle()" }) | @Ajax.ActionLink("Remove", "DeleteCart", "Cart", routeValues: new { id = item.ProductId }, htmlAttributes: new { @class = "btn btn-danger" }, ajaxOptions: new AjaxOptions { HttpMethod = "Get", UpdateTargetId = "Cart", InsertionMode = InsertionMode.Replace, OnSuccess = "confirm('Sure to Remove ?')" })
+                                <div class="cart_item_btn" @*style="width: 200px; float: right; margin: 20px 0; padding: 5px; "*@>
+                                    @Ajax.ActionLink("Edit", "EditCart", "Cart", routeValues: new { id = item.ProductId }, htmlAttributes: new { @class = "btn btn-info" }, ajaxOptions: new AjaxOptions { HttpMethod = "Get", UpdateTargetId = "editCart", InsertionMode = InsertionMode.Replace, OnSuccess = "EditToggle()" })  @Ajax.ActionLink("Remove", "DeleteCart", "Cart", routeValues: new { id = item.ProductId }, htmlAttributes: new { @class = "btn btn-danger" }, ajaxOptions: new AjaxOptions { HttpMethod = "Get", UpdateTargetId = "Cart", InsertionMode = InsertionMode.Replace, OnSuccess = "UpdateCartCounter();" })
+                                </div>
                             </li>
-                                orderTotal += P.Price * item.Quantity;
-                            }
-                        </ul>
-                    </div>
+                            orderTotal += P.Price * item.Quantity;
+                        }
+                    </ul>
+                </div>
 
-                    <!-- Order Total -->
-                    <div class="order_total">
-                        <div class="order_total_content text-md-right">
-                            <div class="order_total_title">Total Price</div>
-                            <div class="order_total_amount">@orderTotal.ToString("0.#####") LE</div>
-                        </div>
+                <!-- Order Total -->
+                <div class="order_total">
+                    <div class="order_total_content text-md-right">
+                        <div class="order_total_title">Total Price</div>
+                        <div class="order_total_amount">@orderTotal.ToString("0.#####") LE</div>
                     </div>
+                </div>
 
-                    <div class="cart_buttons">
-
-                        <button type="button" class="button cart_button_checkout" onclick="location.href='@Url.Action("OrderData" ,"Order")'">Confirm Order</button>
-                    </div>
+                <div class="cart_buttons">
+                    @if(Model.Count() > 0)
+                    {
+                        <button type="button" id="confirmOrderBtn" class="button cart_button_checkout" onclick="location.href = '@Url.Action("OrderData" ,"Order")';UpdateCartCounter()">Confirm Order</button>
+                    }
                 </div>
             </div>
         </div>
     </div>
+</div>
