--- a/MdeicalStoreApplication/MedicalStore/Views/Order/DoneOrder.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Order/DoneOrder.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Order/OrderInfo.cshtml";
 }
 
-    <div class="finsh" style="display: none;">
+    <div class="finsh">
         <i class="far fa-check-circle"></i>
         <p>successfully</p>
         <div class="qq">
