--- a/MdeicalStoreApplication/MedicalStore/Views/Shop/ProductDetails.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shop/ProductDetails.cshtml
@@ -47,7 +47,7 @@
                             <div class="button_container">
                                 @if(prdct.QuantityInStock >= 1)
                                 {
-                                    <button type="submit" class="button cart_button">Add to Cart</button>
+                                    <button type="submit" class="button cart_button" onclick="UpdateCartCounter()">Add to Cart</button>
                                 }
                             </div>
                         }
