--- a/MdeicalStoreApplication/MedicalStore/Content/cart_styles.css
+++ b/MdeicalStoreApplication/MedicalStore/Content/cart_styles.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 
 /******************************
@@ -1238,15 +1238,28 @@ select option
 	padding: 15px;
 	padding-right: 46px;
 }
-.cart_item_image
-{
+.cart_item_image {
 	width: 133px;
 	height: 133px;
 	float: left;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
 }
-.cart_item_image img
-{
-	max-width: 100%;
+
+.cart_item_btn {
+	width: 215px;
+	float: right;
+	margin: 20px 0;
+	padding: 5px;
+}
+.btn {
+	width: 100px;
+	border-radius: 10px;
+}
+.cart_item_image img {
+	width: 70%;
+	height: 100%;
 }
 .cart_item_info
 {
