--- a/MdeicalStoreApplication/MedicalStore/Views/Cart/Cart.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Cart/Cart.cshtml
@@ -16,7 +16,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Edit Employee</h4>
+                <h4 class="modal-title">Edit Item Quantity</h4>
             </div>
             <div class="modal-body" id="editCart">
 
@@ -34,7 +34,7 @@
         //$(document).ready(function () {
             function EditToggle() {
                 $("#editModal").modal("toggle");
-            }
+        }
         //})
         
     </script>
