--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -105,14 +105,8 @@
                                         <div class="cart_container d-flex flex-row align-items-center justify-content-end">
                                             <div class="cart_icon">
                                                 <i class="fas fa-cart-arrow-down" style="font-size: 35px;"></i>
-                                                @if (AuthorizationHelper.GetUserInfo() is null)
-                                                {
-                                                    <div class="cart_count"><span>0</span></div>
-                                                }
-                                                else
-                                                {
-                                                    @Html.Action("CartCounter", "Cart")
-                                                }
+                                                <div class="cart_count" ><span id="carCounter">0</span></div>
+
                                             </div>
                                             <div class="cart_content">
                                                 <div class="cart_text">@Html.ActionLink("Cart", "Cart", "Cart")</div>
@@ -352,7 +346,22 @@
     <script src="~/Scripts/product_custom.js"></script>
     <script src="~/Scripts/custom.js"></script>
     <script src="~/Scripts/cart_custom.js"></script>
+    <script>
+        $.get('/Cart/CartCounter', function (data) {
+            $('#carCounter').html(data);
+        });
+        function UpdateCartCounter() {
+            $('#carCounter').load('/Cart/CartCounter');
+
+           
+        }
+        //setInterval(function () {
+        //$('#carCounter').load('/Cart/CartCounter');
+        //}, 2000)
+           
+   
+    </script>
+@RenderSection("Scripts" ,false)
 </body>
 
-@RenderSection("Scripts" ,false)
 </html>
