-Add AdminproductEdit & Delete

--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/Products.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/Products.cshtml
@@ -40,9 +40,13 @@
     <input type="submit" value="Send" class="btn-0" />
 
     @*<button class="btn-0">Send</button>*@
-    <button class="btn-2"> Edit</button>
-    <button class="btn-3"> Delete</button>
+    @*<button class="btn-2"> Edit</button>
+        <button class="btn-3"> Delete</button>*@
 }
+<div>
+    @Html.Action("Prods", "Admin")
+</div>
+
 
 
 
