--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -254,8 +254,8 @@
 
                     <div class="col-lg-2 offset-lg-2">
                         <div class="footer_column">
-                            <div class="footer_title">Find it Fast</div>
-                            <ul class="footer_list">
+                            <div class="footer_title">Categories</div>
+                            @*<ul class="footer_list">
                                 <li><a href="#">Computers & Laptops</a></li>
                                 <li><a href="#">Cameras & Photos</a></li>
                                 <li><a href="#">Hardware</a></li>
@@ -264,32 +264,38 @@
                             </ul>
                             <ul class="footer_list">
                                 <li><a href="#">Car Electronics</a></li>
-                            </ul>
+                            </ul>*@
+
+                            @Html.Action("categoriesList","categories")
                         </div>
                     </div>
 
                     <div class="col-lg-2">
                         <div class="footer_column">
-                            <ul class="footer_list footer_list_2">
+                            @*<ul class="footer_list footer_list_2">
                                 <li><a href="#">Video Games & Consoles</a></li>
                                 <li><a href="#">Accessories</a></li>
                                 <li><a href="#">Cameras & Photos</a></li>
                                 <li><a href="#">Hardware</a></li>
                                 <li><a href="#">Computers & Laptops</a></li>
-                            </ul>
+                            </ul>*@
                         </div>
                     </div>
                     <div class="col-lg-2">
                         <div class="footer_column">
-                            <div class="footer_title">Customer Care</div>
+                            <div class="footer_title">Products</div>
                             <ul class="footer_list">
-                                <li><a href="#">My Account</a></li>
-                                <li><a href="#">Order Tracking</a></li>
-                                <li><a href="#">Wish List</a></li>
-                                <li><a href="#">Customer Services</a></li>
-                                <li><a href="#">Returns / Exchange</a></li>
-                                <li><a href="#">FAQs</a></li>
-                                <li><a href="#">Product Support</a></li>
+                                @*<li><a href="#">My Account</a></li>
+        <li><a href="#">Order Tracking</a></li>
+        <li><a href="#">Wish List</a></li>
+        <li><a href="#">Customer Services</a></li>
+        <li><a href="#">Returns / Exchange</a></li>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">Product Support</a></li>*@
+
+                              @*<li>  @Html.ActionLink("Shop","shop", "shop")</li>*@
+                                @*<li> @Html.ActionLink("About","about", "") </li>
+                               <li> @Html.ActionLink("Contact", "")</li> *@
                             </ul>
                         </div>
                     </div>
