--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/Orders.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/Orders.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="desc-cat text-center">
+﻿@model IEnumerable<AdminOrderViewModel>
+
+<div class="desc-cat text-center">
     <h1>Orders Status</h1>
 </div>
 <div class="order-table">
@@ -13,25 +15,21 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>1/1/2020</td>
-                <td>Ahmed</td>
-                <td>
-                    <select name="" id="sel">
-                        <option value="" selected disabled hidden>
-                            Choose Here
-                        </option>
-                        <option value="">Confirmed</option>
-                        <option value="">OnWay</option>
-                        <option value="">Delivered</option>
-                        <option value="">Cancelled</option>
-                    </select>
-                </td>
-                <td>
-                    <button>Change Status</button>
-                </td>
-            </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(m => item.Id)</td>
+                    <td>@Html.DisplayFor(m => item.DateAdded)</td>
+                    <td>@Html.DisplayFor(m => item.User.UserName) </td>
+                    <td>
+                        @Html.EnumDropDownListFor(M => item.OrderStatus, new { @class = "form-control" })
+                    </td>
+                    <td>
+                        <button>Change Status</button>
+                    </td>
+                </tr>
+            }
+
         </tbody>
     </table>
 </div>
