--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -278,17 +278,11 @@
                         <div class="footer_column">
                             <div class="footer_title">Products</div>
                             <ul class="footer_list">
-                                @*<li><a href="#">My Account</a></li>
-        <li><a href="#">Order Tracking</a></li>
-        <li><a href="#">Wish List</a></li>
-        <li><a href="#">Customer Services</a></li>
-        <li><a href="#">Returns / Exchange</a></li>
-        <li><a href="#">FAQs</a></li>
-        <li><a href="#">Product Support</a></li>*@
-
-                              @*<li>  @Html.ActionLink("Shop","shop", "shop")</li>*@
+                               
+                                <li>@Html.ActionLink("Home","index","home")</li>
+                              <li>  @Html.ActionLink("Shop","shop", "shop")</li>
                                 @*<li> @Html.ActionLink("About","about", "") </li>
-                               <li> @Html.ActionLink("Contact", "")</li> *@
+                               <li> @Html.ActionLink("Contact Us", "contactUs","")</li> *@
                             </ul>
                         </div>
                     </div>
