--- a/MdeicalStoreApplication/MedicalStore/Views/Shop/Shop.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shop/Shop.cshtml
@@ -9,81 +9,99 @@
         <div class="row">
             <div class="col-lg-3">
 
-<!-- Shop Sidebar -->
-<div class="shop_sidebar">
-            <div class="sidebar_section">
-                <div class="sidebar_title">Categories</div>
-                <ul class="sidebar_categories">
-                    <li>@Html.ActionLink("All", "Shop", "Shop")</li>
-                    @foreach (var item in ViewBag.cats as IEnumerable<CategoryViewModel>)
-                    {
-                        <li>@Html.ActionLink(item.Name ,"ViewCategoryProducts" ,"Shop",htmlAttributes:new { }, routeValues : new { id = item.Id})</li>
-                    }
-                </ul>
-            </div>
-        </div>
+                <!-- Shop Sidebar -->
+                <div class="shop_sidebar">
+                    <div class="sidebar_section">
+                        <div class="sidebar_title">Categories</div>
+                        <ul class="sidebar_categories">
+                            <li>
+                                @Ajax.ActionLink("All", "ShowProducts", "Shop", new { id = 0 }, new AjaxOptions()
+                                                       {
+                                                           HttpMethod = "GET",
+                                                           UpdateTargetId = "show-product-ajax",
+                                                           InsertionMode = InsertionMode.Replace
+                                                       })
+                                                    </li>
+                            @foreach (var item in ViewBag.cats as IEnumerable<CategoryViewModel>)
+                            {
+                                <li>@*@Html.ActionLink(item.Name, "ViewCategoryProducts", "Shop", htmlAttributes: new { }, routeValues: new { id = item.Id })*@</li>
+                                <li>@Ajax.ActionLink(item.Name, "ShowProducts", "Shop", new { id = item.Id }, new AjaxOptions()
+                               {
+                                   HttpMethod = "GET",
+                                   UpdateTargetId = "show-product-ajax",
+                                   InsertionMode = InsertionMode.Replace
+                               })
 
-    </div>
 
-    <div class="col-lg-9">
+                                </li>
 
-<!-- Shop Content -->
-<div class="shop_content">
-    <div class="shop_bar clearfix">
-        <div class="shop_product_count"><span>@Model.Count()</span> products found</div>
-
-    </div>
-
-    <div class="product_grid">
-        <div class="product_grid_border"></div>
-        <div class="row">
-            @foreach (var item in Model)
-            {
-                if (item.QuantityInStock > 0)
-                {
-                    <!-- Product Item -->
-                    <div class="product_item">
-                        <a href="@Url.Action("ProductDetails","Shop",routeValues:new { id = item.Id})">
-                            <div class="over-v"><i class="fas fa-eye"> </i></div>
-                        </a>
-                        <div class="product_border"></div>
-                        <div class="product_image d-flex flex-column align-items-center justify-content-center"><img src="data:image/png;base64,@item.Image" alt=""></div>
-                        <div class="product_content">
-                            <div class="product_price">@item.Price.ToString("0.#####") LE</div>
-                            <div class="product_name"><div><a tabindex="0">@item.Name</a></div></div>
-                        </div>
+                            }
+                        </ul>
                     </div>
-                }
-                else
-                {
-                    <!-- Product Item -->
-        <div class="product_item discount">">
-            <a href="@Url.Action("ProductDetails","Shop",routeValues:new { id = item.Id})">
-                <div class="over-v"><i class="fas fa-eye"> </i></div>
-            </a>
-            <div class="product_border"></div>
-            <div class="product_image d-flex flex-column align-items-center justify-content-center"><img src="data:image/png;base64,@item.Image" alt=""></div>
-            <div class="product_content">
-                <div class="product_price">@item.Price.ToString("0.#####") LE</div>
-                <div class="product_name"><div><a tabindex="0">@item.Name</a></div></div>
-            </div>
-            <ul class="product_marks">
-                <li class="product_mark product_discount">Not available now</li>
-                <li class="product_mark product_new">new</li>
-            </ul>
-        </div>
-                }
-            }
-        </div>
+                </div>
 
-    </div>
+            </div>
+
+            <div class="col-lg-9">
+
+                <!-- Shop Content -->
+                <div class="shop_content"  id="show-product-ajax">
+                    <div class="shop_bar clearfix">
+                        <div class="shop_product_count"><span>@Model.Count()</span> products found</div>
+
+                    </div>
+
+                    <div class="product_grid">
+                        <div class="product_grid_border"></div>
+                        <div class="row">
+                            @foreach (var item in Model)
+                            {
+                                if (item.QuantityInStock > 0)
+                                {
+                                    <!-- Product Item -->
+                                    <div class="product_item">
+                                        <a href="@Url.Action("ProductDetails","Shop",routeValues:new { id = item.Id})">
+                                            <div class="over-v"><i class="fas fa-eye"> </i></div>
+                                        </a>
+                                        <div class="product_border"></div>
+                                        <div class="product_image d-flex flex-column align-items-center justify-content-center"><img src="data:image/png;base64,@item.Image" alt=""></div>
+                                        <div class="product_content">
+                                            <div class="product_price">@item.Price.ToString("0.#####") LE</div>
+                                            <div class="product_name"><div><a tabindex="0">@item.Name</a></div></div>
+                                        </div>
+                                    </div>
+                                }
+                                else
+                                {
+                                    <!-- Product Item -->
+                                    <div class="product_item discount">
+                                        ">
+                                        <a href="@Url.Action("ProductDetails","Shop",routeValues:new { id = item.Id})">
+                                            <div class="over-v"><i class="fas fa-eye"> </i></div>
+                                        </a>
+                                        <div class="product_border"></div>
+                                        <div class="product_image d-flex flex-column align-items-center justify-content-center"><img src="data:image/png;base64,@item.Image" alt=""></div>
+                                        <div class="product_content">
+                                            <div class="product_price">@item.Price.ToString("0.#####") LE</div>
+                                            <div class="product_name"><div><a tabindex="0">@item.Name</a></div></div>
+                                        </div>
+                                        <ul class="product_marks">
+                                            <li class="product_mark product_discount">Not available now</li>
+                                            <li class="product_mark product_new">new</li>
+                                        </ul>
+                                    </div>
+                                }
+                            }
+                        </div>
 
                     </div>
 
                 </div>
+
             </div>
         </div>
     </div>
+</div>
 
 
 
