--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -259,7 +259,7 @@
                                 <li><a href="#">Car Electronics</a></li>
                             </ul>*@
 
-                            @Html.Action("categoriesList","categories")
+                            @*@Html.Action("categoriesList","categories")*@
                         </div>
                     </div>
 
