--- a/MdeicalStoreApplication/MedicalStore/Views/Cart/CartContent.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Cart/CartContent.cshtml
@@ -58,9 +58,10 @@
                 </div>
 
                 <div class="cart_buttons">
-                    @if(Model.Count() > 0)
+                    @if (Model.Count() > 0)
                     {
-                        <button type="button" id="confirmOrderBtn" class="button cart_button_checkout" onclick="location.href = '@Url.Action("OrderData" ,"Order")';UpdateCartCounter()">Confirm Order</button>
+                        <button type="button" id="confirmOrderBtn" class="button cart_button_checkout" onclick="location.href = '@Url.Action("OrderData" ,"Order")';UpdateCartCounter()">Check out cash</button>
+                        <button type="button" id="confirmOrderBtn" class="button cart_button_checkout" onclick="location.href = '@Url.Action("PaymentWithPaypal" ,"Cart")';UpdateCartCounter()">Check out Paypal</button>
                     }
                 </div>
             </div>
