--- a/MdeicalStoreApplication/MedicalStore/Content/main_styles.css
+++ b/MdeicalStoreApplication/MedicalStore/Content/main_styles.css
@@ -1255,12 +1255,13 @@ select option
 	background: #8d8d8d;
 	content: '';
 }
-.banner_product_name
-{
+.banner_product_name {
 	font-size: 18px;
 	font-weight: 400;
 	color: #000000;
 	margin-top: 8px;
+	width: 250px;
+	overflow: hidden;
 }
 .banner_button
 {
@@ -1285,11 +1286,12 @@ select option
 }
 .char_item
 {
-	width: 100%;
+	width: 50%;
 	height: 100px;
 	box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
 	border: solid 1px #e8e8e8;
 	padding-left: 36px;
+	margin:auto;
 }
 .char_icon
 {
