--- a/MdeicalStoreApplication/MedicalStore/Views/Order/OrderInfo.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Order/OrderInfo.cshtml
@@ -22,7 +22,7 @@
                 <div class="col-md-3 col-xs-12">
                     <ul>
                         <li><button onclick="location.href='@Url.Action("Index" ,"Home")'">Home</button></li>
-                        <li><button onclick="location.href='@Url.Action("CartContent" ,"Cart")'">Cart</button></li>
+                        <li><button onclick="location.href='@Url.Action("Cart" ,"Cart")'">Cart</button></li>
                     </ul>
                 </div>
             </div>
