--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -271,13 +271,13 @@
                     </div>
                     <div class="col-lg-2">
                         <div class="footer_column">
-                            <div class="footer_title">Products</div>
+                            <div class="footer_title">Links</div>
                             <ul class="footer_list">
 
                                 <li>@Html.ActionLink("Home", "index", "home")</li>
                                 <li>  @Html.ActionLink("Shop", "shop", "shop")</li>
-                                @*<li> @Html.ActionLink("About","about", "") </li>
-                                    <li> @Html.ActionLink("Contact Us", "contactUs","")</li> *@
+                                <li> @Html.ActionLink("About","about", "Home") </li>
+                                    <li> @Html.ActionLink("Contact Us", "contactUs","home")</li> 
                             </ul>
                         </div>
                     </div>
