--- a/MdeicalStoreApplication/MedicalStore/Views/Categories/AllCategories.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Categories/AllCategories.cshtml
@@ -14,7 +14,7 @@
         {
             <li>
                 @*<a href="#">*@
-                @Html.ActionLink($"{item.Name}" , $"ViewCategoryProducts/{item.Id}", "Shop")
+                @Html.ActionLink($"{item.Name}" , "ViewCategoryProducts", "Shop",routeValues:new { id=item.Id},htmlAttributes:new { })
                    
                    
                 @*</a>*@
