-Correct grammer errors

--- a/MdeicalStoreApplication/MedicalStore/Views/Account/Login.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
                     <div class="lo">
                         <p class="text-center" style="color: #0984e3;">
                             Don't Have an Account ?
-                            @Html.ActionLink("Register Now", "Login", "Account")
+                            @Html.ActionLink("Register Now", "Register", "Account")
                         </p>
                     </div>
                 </div>
