--- a/MdeicalStoreApplication/MedicalStore/Views/Account/Register.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Account/Register.cshtml
@@ -43,7 +43,7 @@
 
                             <div class="login-1">
                                 <p class="text-center login22">
-                                    Don't Have an Account ?
+                                    Do you have account ?
                                     @*<a href="#" onclick="reg()"> Login Now</a>*@
                                     @Html.ActionLink("Login now", "Login", "Account")
                                 </p>
