--- a/MdeicalStoreApplication/MedicalStore/Views/Order/DoneOrder.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Order/DoneOrder.cshtml
@@ -8,7 +8,7 @@
         <i class="far fa-check-circle"></i>
         <p>successfully</p>
         <div class="qq">
-            <p>Do You Wont To Buy Other Products?..</p>
+            <p>Do You Want To Buy Other Products?..</p>
             <button onclick="location.href='@Url.Action("Shop" ,"Shop")'">Yes</button>
             <button onclick="location.href='@Url.Action("Index" ,"Home")'">Thanks</button>
         </div>
