--- a/MdeicalStoreApplication/MedicalStore/Views/Home/ContactUs.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Home/ContactUs.cshtml
@@ -72,15 +72,16 @@
     </div>
     <div class="panel"></div>
 </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27474.62291519142!2d32.25404434999998!3d30.59651419999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f85bff34f1282d%3A0x1febf76c88f3903a!2z2KfZhNmC2LXZitmFINmE2YPZhdin2YTZitin2Kog2YjZgti32Lkg2LrZitin2LEg2KfZhNiz2YrYp9ix2KfYqiDYp9mE2KfYs9mF2KfYudmK2YTZitip!5e0!3m2!1sar!2seg!4v1593196483362!5m2!1sar!2seg" width="100%" height="550px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
 
 <!-- Map -->
-
-<div class="contact_map">
-    <div id="google_map" class="google_map">
-        <div class="map_container">
-            <div id="map"></div>
+@*<div class="contact_map">
+        <div id="google_map" class="google_map">
+            <div class="map_container">
+                <div id="map"></div>
+            </div>
         </div>
-    </div>
-</div>
+    </div>*@
 
 
