--- a/MdeicalStoreApplication/MedicalStore/Views/Home/Index.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                     <h1 class="banner_text">@lastProduct.Name</h1>
                     <div class="banner_price">@lastProduct.Price.ToString("0.#####") LE</div>
                     <div class="banner_product_name">@categories.SingleOrDefault(ww => ww.Id == lastProduct.CategoryId)</div>
-                    <div class="button banner_button">@Html.ActionLink("Buy Now", "ProductDetails", "Shop",htmlAttributes:new { } ,routeValues:new { id=firstProduct.Id})</div>
+                    <div class="button banner_button">@Html.ActionLink("Buy Now", "ProductDetails", "Shop",htmlAttributes:new { } ,routeValues:new { id=lastProduct.Id})</div>
                 </div>
             </div>
         </div>
