--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
     <link href="~/Content/contact_responsive.css" rel="stylesheet" />
     <link href="~/Content/aos.css" rel="stylesheet" />
     <link href="~/Content/about.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="~/Images/letter-m.png">
+
 
 </head>
 
@@ -343,6 +345,7 @@
     <script src="~/Scripts/contact_custom.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBmnATbcsItV07AIzYhG-6E0ZYgZgTkh3w"></script>
     <script src="~/Scripts/aos.js"></script>
+
     <script>
         $.get('/Cart/CartCounter', function (data) {
             $('#carCounter').html(data);
